--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <label for="usuario">Usuario</label>
                 <input type="text" id="usuario" class="placeholder" placeholder="Ingrese su usuario">
                 <label for="contraseña">Contraseña</label>
-                <input type="text" id="contraseña" class="placeholder" placeholder="************">
+                <input type="password" id="contraseña" class="placeholder" placeholder="************">
                 <button class="button">Ingresar</button>
             </form>
         </div>
